# cli

./: .gitignore  AGENTS.md  CONTRIBUTORS.md  Cargo.toml  LICENSE  Makefile  README.md  REVIEW.md  build.rs  dist-workspace.toml  openapi.json
.claude/skills/cut-release/: SKILL.md
.claude/skills/detail-bugs/: SKILL.md
.claude/skills/detail-create-rules/: SKILL.md
.claude/skills/testing-cli/: SKILL.md
.claude/skills/triage-detail-bugs/: SKILL.md
.github/workflows/: api-docs.yml  auto-tag.yml  ci.yml  integration.yml  release.yml  stale.yml
docs/: HELP.md
docs/api/: index.html
examples/: generate_help.rs
src/: lib.rs  main.rs  output.rs  upgrade.rs  utils.rs
src/api/: client.rs  generated.rs  mod.rs  types.rs
src/commands/: auth.rs  bugs.rs  completions.rs  mod.rs  repo_helpers.rs  repos.rs  rules.rs  scans.rs  skill.rs  update.rs
src/commands/cube_spin/: math3d.rs  mod.rs  render.rs
src/commands/fun/: logo_math.rs  mod.rs  render.rs  sort_state.rs
src/commands/satisfying_sort/: logo_math.rs  mod.rs  numeric.rs  render.rs  sort_state.rs
src/config/: storage.rs
src/utils/: datetime.rs  git.rs  mod.rs  pagination.rs  repos.rs
tests/: check_help.rs  integration.rs
xtask/: Cargo.toml
xtask/src/: main.rs
