[package]
name = "detail-cli"
version = "0.1.5"
edition = "2021"
authors = ["Detail Team <eng@detail.dev>"]
license = "MIT"
description = "CLI for Detail bug finder"
homepage = "https://detail.dev"
repository = "https://github.com/usedetail/cli"

[[bin]]
name = "detail"
path = "src/main.rs"

[dependencies]
# CLI framework
clap = { version = "4.5", features = ["derive", "cargo", "env"] }

# HTTP client
reqwest = { version = "0.13", features = ["json"] }
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Generated API client
progenitor = "0.12.0"

# Error handling
anyhow = "1.0"

# Config management
toml = "0.9"
homedir = "0.3"

# Terminal UI
console = "0.16"
dialoguer = "0.11"
termimad = "0.30"

# Update checking (uses cargo-dist receipts)
axoupdater = "0.9.1"

# Date/time formatting
chrono = "0.4"
regress = "0.10.5"

[dev-dependencies]
clap-markdown = "0.1"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
