[package]
name = "detail-cli"
version = "0.1.10"
edition = "2021"
authors = ["Detail Team <eng@detail.dev>"]
license = "MIT"
description = "CLI for Detail bug finder"
homepage = "https://detail.dev"
repository = "https://github.com/usedetail/cli"

[[bin]]
name = "detail"
path = "src/main.rs"

[dependencies]
# CLI framework
clap = { version = "4.5", features = ["derive", "cargo", "env"] }

# HTTP client
reqwest = { version = "0.13", features = ["json"] }
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Generated API client
progenitor = "0.12.0"

# Error handling
anyhow = "1.0"

# Config management
toml = "0.9"
homedir = "0.3"
fs2 = "0.4"

# Terminal UI
console = "0.16"
dialoguer = "0.11"
termimad = "0.30"
ratatui = { version = "0.30", default-features = false, features = ["crossterm"] }
libc = "0.2"
rand = { version = "0.9", features = ["small_rng"] }
num-traits = "0.2"

# Update checking (uses cargo-dist receipts)
axoupdater = "0.9.1"

# Date/time formatting
chrono = "0.4"
regress = "0.10.5"

[dev-dependencies]
clap-markdown = "0.1"

# The profile that 'dist' will build with
[lints.clippy]
# Pedantic group (includes cloned_instead_of_copied, implicit_clone,
# needless_pass_by_value, redundant_closure_for_method_calls,
# semicolon_if_nothing_returned, manual_let_else, and many more)
pedantic = { level = "deny", priority = -1 }

# Deny: hard errors that should never appear
as_conversions = "deny"
unwrap_used = "deny"
panic = "deny"
expect_used = "deny"
large_futures = "deny"
dbg_macro = "deny"
todo = "deny"
unimplemented = "deny"
mem_forget = "deny"
wildcard_enum_match_arm = "deny"
allow_attributes_without_reason = "deny"
verbose_file_reads = "deny"
rest_pat_in_fully_bound_structs = "deny"

# Allow: pedantic lints that are too noisy
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
return_self_not_must_use = "allow"
module_name_repetitions = "allow"
too_many_lines = "allow"
struct_excessive_bools = "allow"
similar_names = "allow"

[lints.rust]
unsafe_code = "deny"
unreachable_pub = "deny"

[profile.dist]
inherits = "release"
lto = "thin"
