[package]
name = "detail-cli"
version = "0.1.10"
edition = "2021"
authors = ["Detail Team <eng@detail.dev>"]
license = "MIT"
description = "CLI for Detail bug finder"
homepage = "https://detail.dev"
repository = "https://github.com/usedetail/cli"

[[bin]]
name = "detail"
path = "src/main.rs"

[dependencies]
# CLI framework
clap = { version = "4.5", features = ["derive", "cargo", "env"] }

# HTTP client
reqwest = { version = "0.13", features = ["json"] }
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "signal"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Generated API client
progenitor = "0.13.0"

# Error handling
anyhow = "1.0"

# Config management
toml = "1.0"
homedir = "0.3"
fs2 = "0.4"

# Terminal UI
console = "0.16"
dialoguer = "0.12"
termimad = "0.34"
ratatui = { version = "0.30", default-features = false, features = ["crossterm"] }
libc = "0.2"
rand = "0.10"
num-traits = "0.2"

# Update checking (uses cargo-dist receipts)
axoupdater = "0.10"

# Date/time formatting
chrono = "0.4"
regress = "0.10.5"

[dev-dependencies]
clap-markdown = "0.1"

# The profile that 'dist' will build with
[lints.clippy]
# ── Lint groups ──────────────────────────────────────────────────────
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }

# ── Restriction lints (not in any group) ─────────────────────────────
as_conversions = "deny"
unwrap_used = "deny"
panic = "deny"
expect_used = "deny"
large_futures = "deny"
dbg_macro = "deny"
todo = "deny"
unimplemented = "deny"
mem_forget = "deny"
wildcard_enum_match_arm = "deny"
allow_attributes_without_reason = "deny"
verbose_file_reads = "deny"
rest_pat_in_fully_bound_structs = "deny"
clone_on_ref_ptr = "deny"
create_dir = "deny"
empty_drop = "deny"
empty_enum_variants_with_brackets = "deny"
empty_structs_with_brackets = "deny"
error_impl_error = "deny"
exit = "deny"
format_push_string = "deny"
get_unwrap = "deny"
if_then_some_else_none = "deny"
infinite_loop = "deny"
lossy_float_literal = "deny"
map_err_ignore = "deny"
mixed_read_write_in_expression = "deny"
multiple_unsafe_ops_per_block = "deny"
needless_raw_strings = "deny"
rc_buffer = "deny"
rc_mutex = "deny"
redundant_type_annotations = "deny"
same_name_method = "deny"
string_add = "deny"
string_lit_chars_any = "deny"
string_slice = "deny"
tests_outside_test_module = "deny"
try_err = "deny"
undocumented_unsafe_blocks = "deny"
unnecessary_safety_comment = "deny"
unnecessary_self_imports = "deny"
unneeded_field_pattern = "deny"
unseparated_literal_suffix = "deny"
unwrap_in_result = "deny"
fn_to_numeric_cast_any = "deny"
float_cmp_const = "deny"
large_include_file = "deny"
ref_patterns = "deny"
suspicious_xor_used_as_pow = "deny"
iter_over_hash_type = "deny"
let_underscore_must_use = "allow"
multiple_inherent_impl = "deny"
pathbuf_init_then_push = "deny"
impl_trait_in_params = "allow"
partial_pub_fields = "deny"
deref_by_slicing = "deny"
filetype_is_file = "deny"
missing_assert_message = "deny"
semicolon_outside_block = "deny"

# ── Allow: pedantic/nursery lints that are too noisy ─────────────────
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
return_self_not_must_use = "allow"
module_name_repetitions = "allow"
too_many_lines = "allow"
struct_excessive_bools = "allow"
similar_names = "allow"

[lints.rust]
unsafe_code = "deny"
unreachable_pub = "deny"
trivial_casts = "deny"
trivial_numeric_casts = "deny"
unused_qualifications = "deny"
unused_import_braces = "deny"
unused_lifetimes = "deny"
variant_size_differences = "deny"

[profile.dist]
inherits = "release"
lto = "thin"
