[package]
name = "xtask"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
clap = { version = "4.5", features = ["derive"] }
clap-markdown = "0.1"
detail-cli = { path = ".." }
reqwest = { version = "0.13", features = ["json"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
